--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 ﻿{
-  "name": "Xray部署",
-  "description": "Deploy Xray Vless to Heroku.",
-  "keywords": ["V2ray", "Xray"],
+  "name": "yusjdsfjh",
+  "description": "dflckjvmgvg",
+  "keywords": ["djgkjds", "djhfdk"],
   "env": {
     "ProxySite": {
       "description": "反代一个网站，例如：mirror.umd.edu，不填写表示使用本地静态网页文件。",
@@ -10,12 +10,12 @@
 
     "Vless_UUID": {
       "description": "Vless uuid（http://www.uuid.online/在线生成）",
-      "value": "eab45b5b-8f8f-4c3a-8af3-aec118c845dc"
+      "value": "b0a8f4f2-b92f-44f7-9419-43dfc8f5ce9e"
     },
 
     "Vless_Path": {
       "description": "Path路径，默认/s233,为了安全你也可以使用uuid替换s233，/不能少。如果开启反代，不要与反代网站存在的uri相同",
-      "value": "/34ee3479-1d68-4fba-ae2d-2d09c7073b13"
+      "value": "/djkjfmjdjvh"
     },
     "Vmess_UUID": {
       "description": "Vmess uuid（http://www.uuid.online/在线生成）",
@@ -24,7 +24,7 @@
 
     "Vmess_Path": {
       "description": "Path路径，默认/s244,为了安全你也可以使用uuid替换s244，/不能少。如果开启反代，不要与反代网站存在的uri相同",
-      "value": "/35767ffe-ff52-496b-844d-fd313ae58b20"
+      "value": "/aszuixjhvndkj"
     },
     
     "Share_Path": {
@@ -37,7 +37,7 @@
        "value": "latest"
      }
   },
-  "website": "https://github.com/ggg/rf",
-  "repository": "https://github.com/ggg/rf",
+  "website": "",
+  "repository": "",
   "stack": "container"
  }
